parser.output
   0  $accept : %entry% $end

   1  prog : exp EOF

   2  decs :
   3       | dec
   4       | decs dec

   5  dec : tydec
   6      | vardec
   7      | fundecs

   8  tydec : TYPE ID EQUAL ty

   9  ty : ID
  10     | LBRACE tyfields RBRACE
  11     | ARRAY OF ID

  12  tyfields :
  13           | tyfield
  14           | tyfields COMMA tyfield

  15  tyfield : ID COLON ID

  16  vardec : VAR ID ASSIGN exp

  17  fundecs : fundec
  18          | fundecs fundec

  19  fundec : FUNCTION ID LPAREN tyfields RPAREN resultty EQUAL exp

  20  resultty :
  21           | COLON ID

  22  lvalue : ID
  23         | ID DOT ID
  24         | lvalue DOT ID
  25         | ID LBRACKET exp RBRACKET
  26         | lvalue LBRACKET exp RBRACKET

  27  exp : NIL
  28      | lvalue
  29      | LPAREN expseq RPAREN
  30      | INT
  31      | STRING
  32      | MINUS exp
  33      | ID LBRACE records RBRACE
  34      | ID LPAREN funargs RPAREN
  35      | ID LBRACKET exp RBRACKET OF exp
  36      | exp op exp
  37      | exp compar exp
  38      | exp boolean exp
  39      | LET decs IN exp END
  40      | lvalue ASSIGN exp
  41      | IF exp THEN exp
  42      | IF exp THEN exp ELSE exp
  43      | WHILE exp DO exp
  44      | FOR ID ASSIGN exp TO exp DO exp
  45      | BREAK

  46  expseq : exp
  47         | expseq SEMICOLON exp

  48  records : record
  49          | records COMMA record

  50  record : ID EQUAL exp

  51  funargs :
  52          | exp
  53          | funargs COMMA exp

  54  op : PLUS
  55     | MINUS
  56     | TIMES
  57     | DIVIDE

  58  compar : LT
  59         | LE
  60         | GT
  61         | GE
  62         | EQUAL
  63         | NOTEQUAL

  64  boolean : AND
  65          | OR

  66  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (66)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	prog  goto 14
	exp  goto 15
	lvalue  goto 16


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	exp : NIL .  (27)

	.  reduce 27


state 4
	exp : WHILE . exp DO exp  (43)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 17
	lvalue  goto 16


state 5
	exp : FOR . ID ASSIGN exp TO exp DO exp  (44)

	ID  shift 18
	.  error


state 6
	exp : BREAK .  (45)

	.  reduce 45


7: shift/reduce conflict (shift 19, reduce 2) on VAR
7: shift/reduce conflict (shift 20, reduce 2) on FUNCTION
7: shift/reduce conflict (shift 21, reduce 2) on TYPE
state 7
	exp : LET . decs IN exp END  (39)
	decs : .  (2)

	VAR  shift 19
	FUNCTION  shift 20
	TYPE  shift 21
	IN  reduce 2

	decs  goto 22
	dec  goto 23
	tydec  goto 24
	vardec  goto 25
	fundecs  goto 26
	fundec  goto 27


state 8
	exp : IF . exp THEN exp  (41)
	exp : IF . exp THEN exp ELSE exp  (42)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 28
	lvalue  goto 16


state 9
	exp : LPAREN . expseq RPAREN  (29)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 29
	lvalue  goto 16
	expseq  goto 30


state 10
	exp : MINUS . exp  (32)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 31
	lvalue  goto 16


state 11
	exp : STRING .  (31)

	.  reduce 31


12: shift/reduce conflict (shift 34, reduce 22) on LBRACKET
12: shift/reduce conflict (shift 35, reduce 22) on DOT
state 12
	lvalue : ID .  (22)
	lvalue : ID . DOT ID  (23)
	lvalue : ID . LBRACKET exp RBRACKET  (25)
	exp : ID . LBRACE records RBRACE  (33)
	exp : ID . LPAREN funargs RPAREN  (34)
	exp : ID . LBRACKET exp RBRACKET OF exp  (35)

	LPAREN  shift 32
	LBRACE  shift 33
	LBRACKET  shift 34
	DOT  shift 35
	EOF  reduce 22
	VAR  reduce 22
	TO  reduce 22
	IN  reduce 22
	END  reduce 22
	FUNCTION  reduce 22
	TYPE  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	DO  reduce 22
	RPAREN  reduce 22
	RBRACE  reduce 22
	RBRACKET  reduce 22
	COMMA  reduce 22
	SEMICOLON  reduce 22
	ASSIGN  reduce 22
	PLUS  reduce 22
	MINUS  reduce 22
	TIMES  reduce 22
	DIVIDE  reduce 22
	OR  reduce 22
	AND  reduce 22
	EQUAL  reduce 22
	NOTEQUAL  reduce 22
	LT  reduce 22
	LE  reduce 22
	GT  reduce 22
	GE  reduce 22


state 13
	exp : INT .  (30)

	.  reduce 30


state 14
	%entry% : '\001' prog .  (66)

	.  reduce 66


state 15
	prog : exp . EOF  (1)
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)

	EOF  shift 36
	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	.  error

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 16
	lvalue : lvalue . DOT ID  (24)
	lvalue : lvalue . LBRACKET exp RBRACKET  (26)
	exp : lvalue .  (28)
	exp : lvalue . ASSIGN exp  (40)

	LBRACKET  shift 52
	DOT  shift 53
	ASSIGN  shift 54
	EOF  reduce 28
	VAR  reduce 28
	TO  reduce 28
	IN  reduce 28
	END  reduce 28
	FUNCTION  reduce 28
	TYPE  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	DO  reduce 28
	RPAREN  reduce 28
	RBRACE  reduce 28
	RBRACKET  reduce 28
	COMMA  reduce 28
	SEMICOLON  reduce 28
	PLUS  reduce 28
	MINUS  reduce 28
	TIMES  reduce 28
	DIVIDE  reduce 28
	OR  reduce 28
	AND  reduce 28
	EQUAL  reduce 28
	NOTEQUAL  reduce 28
	LT  reduce 28
	LE  reduce 28
	GT  reduce 28
	GE  reduce 28


state 17
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)
	exp : WHILE exp . DO exp  (43)

	DO  shift 55
	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	.  error

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 18
	exp : FOR ID . ASSIGN exp TO exp DO exp  (44)

	ASSIGN  shift 56
	.  error


state 19
	vardec : VAR . ID ASSIGN exp  (16)

	ID  shift 57
	.  error


state 20
	fundec : FUNCTION . ID LPAREN tyfields RPAREN resultty EQUAL exp  (19)

	ID  shift 58
	.  error


state 21
	tydec : TYPE . ID EQUAL ty  (8)

	ID  shift 59
	.  error


state 22
	decs : decs . dec  (4)
	exp : LET decs . IN exp END  (39)

	VAR  shift 19
	IN  shift 60
	FUNCTION  shift 20
	TYPE  shift 21
	.  error

	dec  goto 61
	tydec  goto 24
	vardec  goto 25
	fundecs  goto 26
	fundec  goto 27


state 23
	decs : dec .  (3)

	.  reduce 3


state 24
	dec : tydec .  (5)

	.  reduce 5


state 25
	dec : vardec .  (6)

	.  reduce 6


26: shift/reduce conflict (shift 20, reduce 7) on FUNCTION
state 26
	dec : fundecs .  (7)
	fundecs : fundecs . fundec  (18)

	FUNCTION  shift 20
	VAR  reduce 7
	IN  reduce 7
	TYPE  reduce 7

	fundec  goto 62


state 27
	fundecs : fundec .  (17)

	.  reduce 17


state 28
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)
	exp : IF exp . THEN exp  (41)
	exp : IF exp . THEN exp ELSE exp  (42)

	THEN  shift 63
	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	.  error

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 29
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)
	expseq : exp .  (46)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	RPAREN  reduce 46
	SEMICOLON  reduce 46

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 30
	exp : LPAREN expseq . RPAREN  (29)
	expseq : expseq . SEMICOLON exp  (47)

	RPAREN  shift 64
	SEMICOLON  shift 65
	.  error


state 31
	exp : MINUS exp .  (32)
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)

	TIMES  shift 39
	DIVIDE  shift 40
	EOF  reduce 32
	VAR  reduce 32
	TO  reduce 32
	IN  reduce 32
	END  reduce 32
	FUNCTION  reduce 32
	TYPE  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	DO  reduce 32
	RPAREN  reduce 32
	RBRACE  reduce 32
	RBRACKET  reduce 32
	COMMA  reduce 32
	SEMICOLON  reduce 32
	PLUS  reduce 32
	MINUS  reduce 32
	OR  reduce 32
	AND  reduce 32
	EQUAL  reduce 32
	NOTEQUAL  reduce 32
	LT  reduce 32
	LE  reduce 32
	GT  reduce 32
	GE  reduce 32

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 32
	exp : ID LPAREN . funargs RPAREN  (34)
	funargs : .  (51)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	RPAREN  reduce 51
	COMMA  reduce 51

	exp  goto 66
	lvalue  goto 16
	funargs  goto 67


state 33
	exp : ID LBRACE . records RBRACE  (33)

	ID  shift 68
	.  error

	records  goto 69
	record  goto 70


state 34
	lvalue : ID LBRACKET . exp RBRACKET  (25)
	exp : ID LBRACKET . exp RBRACKET OF exp  (35)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 71
	lvalue  goto 16


state 35
	lvalue : ID DOT . ID  (23)

	ID  shift 72
	.  error


state 36
	prog : exp EOF .  (1)

	.  reduce 1


state 37
	op : PLUS .  (54)

	.  reduce 54


state 38
	op : MINUS .  (55)

	.  reduce 55


state 39
	op : TIMES .  (56)

	.  reduce 56


state 40
	op : DIVIDE .  (57)

	.  reduce 57


state 41
	boolean : OR .  (65)

	.  reduce 65


state 42
	boolean : AND .  (64)

	.  reduce 64


state 43
	compar : EQUAL .  (62)

	.  reduce 62


state 44
	compar : NOTEQUAL .  (63)

	.  reduce 63


state 45
	compar : LT .  (58)

	.  reduce 58


state 46
	compar : LE .  (59)

	.  reduce 59


state 47
	compar : GT .  (60)

	.  reduce 60


state 48
	compar : GE .  (61)

	.  reduce 61


state 49
	exp : exp op . exp  (36)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 73
	lvalue  goto 16


state 50
	exp : exp compar . exp  (37)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 74
	lvalue  goto 16


state 51
	exp : exp boolean . exp  (38)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 75
	lvalue  goto 16


state 52
	lvalue : lvalue LBRACKET . exp RBRACKET  (26)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 76
	lvalue  goto 16


state 53
	lvalue : lvalue DOT . ID  (24)

	ID  shift 77
	.  error


state 54
	exp : lvalue ASSIGN . exp  (40)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 78
	lvalue  goto 16


state 55
	exp : WHILE exp DO . exp  (43)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 79
	lvalue  goto 16


state 56
	exp : FOR ID ASSIGN . exp TO exp DO exp  (44)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 80
	lvalue  goto 16


state 57
	vardec : VAR ID . ASSIGN exp  (16)

	ASSIGN  shift 81
	.  error


state 58
	fundec : FUNCTION ID . LPAREN tyfields RPAREN resultty EQUAL exp  (19)

	LPAREN  shift 82
	.  error


state 59
	tydec : TYPE ID . EQUAL ty  (8)

	EQUAL  shift 83
	.  error


state 60
	exp : LET decs IN . exp END  (39)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 84
	lvalue  goto 16


state 61
	decs : decs dec .  (4)

	.  reduce 4


state 62
	fundecs : fundecs fundec .  (18)

	.  reduce 18


state 63
	exp : IF exp THEN . exp  (41)
	exp : IF exp THEN . exp ELSE exp  (42)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 85
	lvalue  goto 16


state 64
	exp : LPAREN expseq RPAREN .  (29)

	.  reduce 29


state 65
	expseq : expseq SEMICOLON . exp  (47)

	NIL  shift 3
	WHILE  shift 4
	FOR  shift 5
	BREAK  shift 6
	LET  shift 7
	IF  shift 8
	LPAREN  shift 9
	MINUS  shift 10
	STRING  shift 11
	ID  shift 12
	INT  shift 13
	.  error

	exp  goto 86
	lvalue  goto 16


state 66
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)
	funargs : exp .  (52)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	RPAREN  reduce 52
	COMMA  reduce 52

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 67
	exp : ID LPAREN funargs . RPAREN  (34)
	funargs : funargs . COMMA exp  (53)

	RPAREN  shift 87
	COMMA  shift 88
	.  error


state 68
	record : ID . EQUAL exp  (50)

	EQUAL  shift 89
	.  error


state 69
	exp : ID LBRACE records . RBRACE  (33)
	records : records . COMMA record  (49)

	RBRACE  shift 90
	COMMA  shift 91
	.  error


state 70
	records : record .  (48)

	.  reduce 48


state 71
	lvalue : ID LBRACKET exp . RBRACKET  (25)
	exp : ID LBRACKET exp . RBRACKET OF exp  (35)
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)

	RBRACKET  shift 92
	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	.  error

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 72
	lvalue : ID DOT ID .  (23)

	.  reduce 23


73: shift/reduce conflict (shift 37, reduce 36) on PLUS
73: shift/reduce conflict (shift 38, reduce 36) on MINUS
73: shift/reduce conflict (shift 39, reduce 36) on TIMES
73: shift/reduce conflict (shift 40, reduce 36) on DIVIDE
73: shift/reduce conflict (shift 41, reduce 36) on OR
73: shift/reduce conflict (shift 42, reduce 36) on AND
73: shift/reduce conflict (shift 43, reduce 36) on EQUAL
73: shift/reduce conflict (shift 44, reduce 36) on NOTEQUAL
73: shift/reduce conflict (shift 45, reduce 36) on LT
73: shift/reduce conflict (shift 46, reduce 36) on LE
73: shift/reduce conflict (shift 47, reduce 36) on GT
73: shift/reduce conflict (shift 48, reduce 36) on GE
state 73
	exp : exp . op exp  (36)
	exp : exp op exp .  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	EOF  reduce 36
	VAR  reduce 36
	TO  reduce 36
	IN  reduce 36
	END  reduce 36
	FUNCTION  reduce 36
	TYPE  reduce 36
	THEN  reduce 36
	ELSE  reduce 36
	DO  reduce 36
	RPAREN  reduce 36
	RBRACE  reduce 36
	RBRACKET  reduce 36
	COMMA  reduce 36
	SEMICOLON  reduce 36

	op  goto 49
	compar  goto 50
	boolean  goto 51


74: shift/reduce conflict (shift 37, reduce 37) on PLUS
74: shift/reduce conflict (shift 38, reduce 37) on MINUS
74: shift/reduce conflict (shift 39, reduce 37) on TIMES
74: shift/reduce conflict (shift 40, reduce 37) on DIVIDE
74: shift/reduce conflict (shift 41, reduce 37) on OR
74: shift/reduce conflict (shift 42, reduce 37) on AND
74: shift/reduce conflict (shift 43, reduce 37) on EQUAL
74: shift/reduce conflict (shift 44, reduce 37) on NOTEQUAL
74: shift/reduce conflict (shift 45, reduce 37) on LT
74: shift/reduce conflict (shift 46, reduce 37) on LE
74: shift/reduce conflict (shift 47, reduce 37) on GT
74: shift/reduce conflict (shift 48, reduce 37) on GE
state 74
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp compar exp .  (37)
	exp : exp . boolean exp  (38)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	EOF  reduce 37
	VAR  reduce 37
	TO  reduce 37
	IN  reduce 37
	END  reduce 37
	FUNCTION  reduce 37
	TYPE  reduce 37
	THEN  reduce 37
	ELSE  reduce 37
	DO  reduce 37
	RPAREN  reduce 37
	RBRACE  reduce 37
	RBRACKET  reduce 37
	COMMA  reduce 37
	SEMICOLON  reduce 37

	op  goto 49
	compar  goto 50
	boolean  goto 51


75: shift/reduce conflict (shift 37, reduce 38) on PLUS
75: shift/reduce conflict (shift 38, reduce 38) on MINUS
75: shift/reduce conflict (shift 39, reduce 38) on TIMES
75: shift/reduce conflict (shift 40, reduce 38) on DIVIDE
75: shift/reduce conflict (shift 41, reduce 38) on OR
75: shift/reduce conflict (shift 42, reduce 38) on AND
75: shift/reduce conflict (shift 43, reduce 38) on EQUAL
75: shift/reduce conflict (shift 44, reduce 38) on NOTEQUAL
75: shift/reduce conflict (shift 45, reduce 38) on LT
75: shift/reduce conflict (shift 46, reduce 38) on LE
75: shift/reduce conflict (shift 47, reduce 38) on GT
75: shift/reduce conflict (shift 48, reduce 38) on GE
state 75
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)
	exp : exp boolean exp .  (38)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	EOF  reduce 38
	VAR  reduce 38
	TO  reduce 38
	IN  reduce 38
	END  reduce 38
	FUNCTION  reduce 38
	TYPE  reduce 38
	THEN  reduce 38
	ELSE  reduce 38
	DO  reduce 38
	RPAREN  reduce 38
	RBRACE  reduce 38
	RBRACKET  reduce 38
	COMMA  reduce 38
	SEMICOLON  reduce 38

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 76
	lvalue : lvalue LBRACKET exp . RBRACKET  (26)
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)

	RBRACKET  shift 93
	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	.  error

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 77
	lvalue : lvalue DOT ID .  (24)

	.  reduce 24


state 78
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)
	exp : lvalue ASSIGN exp .  (40)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	OR  shift 41
	AND  shift 42
	EQUAL  shift 43
	NOTEQUAL  shift 44
	LT  shift 45
	LE  shift 46
	GT  shift 47
	GE  shift 48
	EOF  reduce 40
	VAR  reduce 40
	TO  reduce 40
	IN  reduce 40
	END  reduce 40
	FUNCTION  reduce 40
	TYPE  reduce 40
	THEN  reduce 40
	ELSE  reduce 40
	DO  reduce 40
	RPAREN  reduce 40
	RBRACE  reduce 40
	RBRACKET  reduce 40
	COMMA  reduce 40
	SEMICOLON  reduce 40

	op  goto 49
	compar  goto 50
	boolean  goto 51


state 79
	exp : exp . op exp  (36)
	exp : exp . compar exp  (37)
	exp : exp . boolean exp  (38)
	exp : WHILE exp DO exp .  (43)
